--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,42 @@
-node_modules
+# Node modules
+node_modules/
+
+# Environment variables
 .env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage
+coverage/
+*.lcov
+
+# Build output
+dist/
+build/
+
+# Editor folders/files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
