--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URL=mongodb+srv://rohitbral5212_db_user:kz5gE45f5Yy8Odq1@cluster0.xt79vim.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET='secret'
+MONGO_URL=mongodb+srv://rohitbral5212_db_user:kz5gE45f5Yy8Odq1@cluster0.xt79vim.mongodb.net/uber?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=secret
