--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,6 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "connect-mongo": "^5.1.0",
-    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -26,5 +25,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
